k8s/raw-manifests/dev/mackllc-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mackllc-ui
  namespace: dev
  labels:
    app: mackllc-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mackllc-ui
  template:
    metadata:
      labels:
        app: mackllc-ui
    spec:
      serviceAccountName: mackllc-ui
      securityContext:
        runAsNonRoot: true
      containers:
        - name: mackllc-ui
          image: 058170692253.dkr.ecr.us-east-1.amazonaws.com/mackllc-ui:sha-0d828ec
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
