k8s/raw-manifests/dev/mackllc-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mackllc-ui
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: mackllc-ui
